fixed layout problems, added login form

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,14 @@ body {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
+  background-color: #f8f8f8;
 }
 
 #root {
   width: 100%;
-  height: 100%;
 }
 
 .app {
-  background-color: #F8F8F8;
-  min-height: 100%;
-  /* height: 100%; WHY????????????????????????*/
   width: 50%;
   padding-left: 25%;
   padding-right: 25%;
