--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -2,13 +2,75 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
     width: 100%;
     overflow-y: hidden;
+    margin-top: 25%;
 }
 
 .login_form {
+    background-color: white;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-right: 60px;
+    padding-left: 60px;
     border: 1px #c9c9c9 solid;
     height: 90%;
     width: 50%;
+}
+
+
+.login_form_header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 10%;
+}
+
+.login_form_header_logo {
+    background-image: url("../../resources/twinstagram-logo-login.PNG");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    min-width: 50px;
+    min-height: 50px;
+}
+
+.login_form_header_slogan {
+    color: #949292;
+}
+
+.login_form_controls {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px #c9c9c9 solid;
+}
+
+.login_form_controls_input {
+    background-color: #f8f8f8;
+    border-radius: 3px;
+    border: 1px #c9c9c9 solid;
+    height: 3em;
+    margin-bottom: 10px;
+}
+
+.login_form_controls_button {
+    border-radius: 3px;
+    height: 3em;
+    border: none;
+    color: white;
+    font-weight: bold;
+    background-color: #4A7CC8;
+    margin-bottom: 25px;
+}
+
+.login_form_sign-up {
+    padding-top: 3em;
+    gap: 5px;
+    justify-content: center;
+    display: flex;
+}
+.text-blue-bold {
+    color: #4A7CC8;
+    font-weight: bold;
 }
